Fix duplicate key and optimization